--- a/learn-zookeeper-parent/pom.xml
+++ b/learn-zookeeper-parent/pom.xml
@@ -6,7 +6,84 @@
 
     <groupId>com.learn.zookeeper</groupId>
     <artifactId>learn-zookeeper-parent</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>learn-zookeeper-admin-boot</module>
+        <module>learn-zookeeper-admin-gateway-api</module>
+        <module>learn-zookeeper-admin-service</module>
+        <module>learn-zookeeper-front-gateway-api</module>
+        <module>learn-zookeeper-front-service</module>
+        <module>learn-zookeeper-dao</module>
+        <module>learn-zookeeper-domain</module>
+        <module>learn-zookeeper-front-boot</module>
+        <module>learn-zookeeper-utils</module>
+        <module>learn-zookeeper-front-configuration</module>
+    </modules>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.6.RELEASE</version>
+    </parent>
 
+    <properties>
+        <spring.boot.version>2.1.6.RELEASE</spring.boot.version>
+        <mybatis.plus.boot.version>3.2.0</mybatis.plus.boot.version>
+        <mysql.connector.version>5.1.44</mysql.connector.version>
+        <zookeeper.version>3.4.6</zookeeper.version>
+        <dubbo.spring.boot.version>2.7.4.1</dubbo.spring.boot.version>
+        <curator.version>4.0.1</curator.version>
+        <fastjson.version>1.2.47</fastjson.version>
+        <commons-lang3.version>3.3.2</commons-lang3.version>
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>${spring.boot.version}</version>
+            </dependency>
+            <!-- mybatis-plus -->
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis.plus.boot.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.connector.version}</version>
+            </dependency>
+            <!-- zookeeper 服务器端 -->
+            <dependency>
+                <groupId>org.apache.zookeeper</groupId>
+                <artifactId>zookeeper</artifactId>
+                <version>${zookeeper.version}</version>
+            </dependency>
+            <!-- zookeeper 客户端dubbo-->
+            <dependency>
+                <groupId>org.apache.dubbo</groupId>
+                <artifactId>dubbo-spring-boot-starter</artifactId>
+                <version>${dubbo.spring.boot.version}</version>
+            </dependency>
+            <!-- zookeeper 客户端curator -->
+            <dependency>
+                <groupId>org.apache.curator</groupId>
+                <artifactId>curator-recipes</artifactId>
+                <version>${curator.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
